--- a/arduino-core/src/processing/app/i18n/Resources_fr.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_fr.properties
@@ -24,7 +24,7 @@
 # R D <rdoume@gmail.com>, 2012
 # Simon <eskimon@outlook.com>, 2015
 # Vincent Moulin <contact@nilux.org>, 2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-20 03\:49+0000\nLast-Translator\: Armel FAUVEAU <armel.fauveau@globalis-ms.com>\nLanguage-Team\: French (http\://www.transifex.com/mbanzi/arduino-ide-15/language/fr/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: fr\nPlural-Forms\: nplurals\=2; plural\=(n > 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-12 21\:26+0000\nLast-Translator\: Lucas Mascaro <mascaro.lucas@yahoo.fr>\nLanguage-Team\: French (http\://www.transifex.com/mbanzi/arduino-ide-15/language/fr/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: fr\nPlural-Forms\: nplurals\=2; plural\=(n > 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\ (n\u00e9cessite un red\u00e9marrage d'Arduino)
@@ -360,7 +360,7 @@ Compiler\ warnings\:\ =Avertissement du compilateur\:
 Compiling\ sketch...=Compilation du croquis...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
-!Contributed=
+Contributed=Contribu\u00e9
 
 #: Editor.java:1157 Editor.java:2707
 Copy=Copier
@@ -477,7 +477,7 @@ Czech\ (Czech\ Republic)=Tch\u00e8que (R\u00e9publique Tch\u00e8que)
 Danish\ (Denmark)=Danois (Danemark)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=Traitement des donn\u00e9es
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
 Data\ Storage=Stockage de donn\u00e9es
@@ -492,7 +492,7 @@ Default=D\u00e9faut
 Delete=Supprimer
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:33
-!Device\ Control=
+Device\ Control=Controle du p\u00e9riph\u00e9rique
 
 #: debug/Uploader.java:199
 Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\ RESET\ the\ board\ right\ before\ exporting=L'appareil ne r\u00e9pond pas, v\u00e9rifiez que le bon port s\u00e9rie est s\u00e9lectionn\u00e9 ou r\u00e9initialisez (RESET) l'Arduino avant d'exporter
@@ -501,7 +501,7 @@ Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\
 Discard\ all\ changes\ and\ reload\ sketch?=Laisser tomber les changements et recharger le croquis\u00a0?
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:29
-!Display=
+Display=Affichage
 
 #: ../../../processing/app/Preferences.java:438
 Display\ line\ numbers=Afficher les num\u00e9ros de ligne
@@ -666,7 +666,7 @@ Error\ while\ printing.=Erreur d'impression.
 
 #: ../../../../../arduino-core/src/processing/app/Serial.java:117
 #, java-format
-!Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=
+Error\ while\ setting\ serial\ port\ parameters\:\ {0}\ {1}\ {2}\ {3}=Erreur durant la d\u00e9finition des param\u00e8tres du port s\u00e9rie\: {0} {1} {2} {3}
 
 #: ../../../processing/app/BaseNoGui.java:528
 Error\ while\ uploading=Erreur lors du transfert
@@ -895,7 +895,7 @@ Library\ Manager=Gestionnaire de biblioth\u00e8que
 Library\ added\ to\ your\ libraries.\ Check\ "Include\ library"\ menu=La biblioth\u00e8que a \u00e9t\u00e9 ajout\u00e9e \u00e0 votre dossier de biblioth\u00e8ques. Veuillez regarder le menu \u00ab\u00a0Importer biblioth\u00e8que\u00a0\u00bb
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
-!Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=
+Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=Une biblioth\u00e8que ne peut utiliser les dossiers 'src' et 'utility' en m\u00eame temps. Double v\u00e9rification {0}
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
@@ -1188,7 +1188,7 @@ Quit=Quitter
 RETIRED=Retir\u00e9
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
-!Recommended=
+Recommended=Recommand\u00e9
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 Redo=R\u00e9tablir
@@ -1481,7 +1481,7 @@ This\ report\ would\ have\ more\ information\ with=Ce rapport contiendrait plus 
 Time\ for\ a\ Break=Il est temps de prendre une pause
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:34
-!Timing=
+Timing=Timing
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:94
 #, java-format
@@ -1712,7 +1712,7 @@ You\ can't\ import\ a\ folder\ that\ contains\ your\ sketchbook=Vous ne pouvez p
 You\ can't\ rename\ the\ sketch\ to\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ .cpp\ file\ with\ that\ name.=Vous ne pouvez renommer le croquis en \u00ab\u00a0{0}\u00a0\u00bb\ncar il existe d\u00e9j\u00e0 un fichier .cpp portant ce nom.
 
 #: ../../../../../app/src/processing/app/Sketch.java:659
-!You\ can't\ save\ the\ sketch\ as\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ file\ with\ that\ name.=
+You\ can't\ save\ the\ sketch\ as\ "{0}"\nbecause\ the\ sketch\ already\ has\ a\ file\ with\ that\ name.=Vous ne pouvez pas sauvegarder le croquis en tant que "{0}"\nparce que le croquis a d\u00e9j\u00e0 un fichier avec ce nom
 
 #: Sketch.java:883
 You\ cannot\ save\ the\ sketch\ into\ a\ folder\ninside\ itself.\ This\ would\ go\ on\ forever.=Vous ne pouvez enregistrer ce croquis dans son\npropre dossier. Cela ferait une boucle infinie.
