--- a/arduino-core/src/processing/app/i18n/Resources_hu.po
+++ b/arduino-core/src/processing/app/i18n/Resources_hu.po
@@ -11,6 +11,7 @@
 # Translators:
 # Translators:
 # benewfy <benewfy@gmail.com>, 2015
+# Federico Fissore <f.fissore@arduino.cc>, 2015
 # Jáni Mátyás <jani.matyas@gmail.com>, 2015
 # Melinda <ghostgirl1983@gmail.com>, 2014
 # Cseh Robert <tavir@tavir.hu>, 2012
@@ -19,8 +20,8 @@ msgstr ""
 "Project-Id-Version: Arduino IDE 1.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-29 10:24-0400\n"
-"PO-Revision-Date: 2015-12-10 01:03+0000\n"
-"Last-Translator: benewfy <benewfy@gmail.com>\n"
+"PO-Revision-Date: 2015-12-14 10:17+0000\n"
+"Last-Translator: Federico Fissore <f.fissore@arduino.cc>\n"
 "Language-Team: Hungarian (http://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -90,7 +91,7 @@ msgstr "<br/>Frissítés érhető el néhány {0}alaplaphoz{1}"
 #, java-format
 msgid ""
 "<br/>Update available for some of your {0}boards{1} and {2}libraries{3}"
-msgstr "<br/>Frissítés érhető el néhány {0}alaplaphoz{1] és {2}könyvtárhoz{3}"
+msgstr "<br/>Frissítés érhető el néhány {0}alaplaphoz{1} és {2}könyvtárhoz{3}"
 
 #: ../../../../../app/src/cc/arduino/contributions/ContributionsSelfCheck.java:62
 #, java-format
