--- a/arduino-core/src/processing/app/i18n/Resources_hu.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_hu.properties
@@ -11,10 +11,11 @@
 # Translators:
 # Translators:
 # benewfy <benewfy@gmail.com>, 2015
+# Federico Fissore <f.fissore@arduino.cc>, 2015
 # J\u00e1ni M\u00e1ty\u00e1s <jani.matyas@gmail.com>, 2015
 # Melinda <ghostgirl1983@gmail.com>, 2014
 # Cseh Robert <tavir@tavir.hu>, 2012
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-10 01\:03+0000\nLast-Translator\: benewfy <benewfy@gmail.com>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-14 10\:17+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=(Arduino \u00fajraind\u00edt\u00e1sa sz\u00fcks\u00e9ges)
@@ -57,7 +58,7 @@
 
 #: ../../../../../app/src/cc/arduino/contributions/ContributionsSelfCheck.java:66
 #, java-format
-<br/>Update\ available\ for\ some\ of\ your\ {0}boards{1}\ and\ {2}libraries{3}=<br/>Friss\u00edt\u00e9s \u00e9rhet\u0151 el n\u00e9h\u00e1ny {0}alaplaphoz{1] \u00e9s {2}k\u00f6nyvt\u00e1rhoz{3}
+<br/>Update\ available\ for\ some\ of\ your\ {0}boards{1}\ and\ {2}libraries{3}=<br/>Friss\u00edt\u00e9s \u00e9rhet\u0151 el n\u00e9h\u00e1ny {0}alaplaphoz{1} \u00e9s {2}k\u00f6nyvt\u00e1rhoz{3}
 
 #: ../../../../../app/src/cc/arduino/contributions/ContributionsSelfCheck.java:62
 #, java-format
